# BlurKernelEstimation

./: README.md  performance.md
code/: fftw_allocator.hpp
refactored_code/: CMakeLists.txt  angleSet.cpp  angleSet.hpp  args.hxx  computeProjectionsAutocorrelation.cpp  computeProjectionsAutocorrelation.hpp  conjugate_gradient.hpp  deconvBregman.cpp  deconvBregman.hpp  estimateKernel.cpp  estimateKernel.hpp  fftw_allocator.hpp  iio.c  iio.h  iio.hpp  image.hpp  main.cpp  options.hpp  phaseRetrieval.cpp  phaseRetrieval.hpp  projectImage.cpp  projectImage.hpp  reconstructPowerspectrum.cpp  reconstructPowerspectrum.hpp
refactored_code/cmake/: FindFFTW3.cmake
refactored_code/tvdeconv_20120607/: basic.c  basic.h  cliio.c  cliio.h  conv.c  conv.h  dsolve_inc.c  imageio.c  imageio.h  imblur.c  imdiff.c  kernels.c  kernels.h  num.h  randmt.c  randmt.h  tvdeconv.c  tvreg.c  tvreg.h  tvregopt.h  usolve_dct_inc.c  usolve_dft_inc.c  util_deconv.h  zsolve_inc.c
